--- a/Exercise Sets/Exercise Set 1/exercise1.html
+++ b/Exercise Sets/Exercise Set 1/exercise1.html
@@ -6,19 +6,19 @@
             <li>FRUITS</li>
                 <ol type = "A">
                     <li>Tropical Fruits</li>
-                    <ul type = "circles">
+                    <ul type = "circle">
                         <li>Mangoes</li>
                         <li>Pineapples</li>
                         <li>Bananas</li>    
                     </ul>
                     <li>Berries</li>
-                    <ul type = "circles">
+                    <ul type = "circle">
                         <li>Strawberries</li>
                         <li>Blueberries</li>
                         <li>Raspberries</li>    
                     </ul>
                     <li>Citrus Fruits</li>
-                    <ul type = "circles">
+                    <ul type = "circle">
                         <li>Oranges</li>
                         <li>Lemons</li>
                         <li>Grapefruits</li>    
@@ -28,19 +28,19 @@
             <li>VEGETABLES</li>
                 <ol type = "A">
                     <li>Leafy Greens</li>
-                    <ul type = "circles">
+                    <ul type = "circle">
                         <li>Spinach</li>
                         <li>Kale</li>
                         <li>Lettuce</li>    
                     </ul>
                     <li>Cruciferous Vegetables</li>
-                    <ul type = "circles">
+                    <ul type = "circle">
                         <li>Broccoli</li>
                         <li>Cauliflower</li>
                         <li>Cabbage</li>    
                     </ul>
                     <li>Root Vegetables</li>
-                    <ul type = "circles">
+                    <ul type = "circle">
                         <li>Carrots</li>
                         <li>Potatoes</li>
                         <li>Beets</li>    
@@ -50,19 +50,19 @@
             <li>PROTEINS</li>
                 <ol type = "A">
                     <li>Meat</li>
-                    <ul type = "circles">
+                    <ul type = "circle">
                         <li>Beef</li>
                         <li>Chicken</li>
                         <li>Pork</li>    
                     </ul>
                     <li>Seafood</li>
-                    <ul type = "circles">
+                    <ul type = "circle">
                         <li>Fish</li>
                         <li>Shrimp</li>
                         <li>Lobster</li>    
                     </ul>
                     <li>Plant-Based Proteins</li>
-                    <ul type = "circles">
+                    <ul type = "circle">
                         <li>Tofu</li>
                         <li>Lentils</li>
                         <li>Tempeh</li>    
