--- a/Laboratory Activities/Laboratory Activity 1 - 05-09-2024/html-tables.html
+++ b/Laboratory Activities/Laboratory Activity 1 - 05-09-2024/html-tables.html
@@ -1,1 +1,193 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Class Schedule</title>
+    <style>
+      body {
+        background-color: #ddecfb;
+      }
+      table {
+        border-collapse: collapse;
+      }
 
+      th,
+      td {
+        border: 1px solid black;
+        text-align: center;
+      }
+      th {
+        background-color: #055699;
+        color: white;
+      }
+    </style>
+  </head>
+  <body>
+    <section>
+      <h1 style="text-align: center">
+        CS 3103 Class Schedule for 1st Semester
+      </h1>
+      <table style="width: 100%">
+        <tr class="header">
+          <th>TIME</th>
+          <th>MONDAY</th>
+          <th>TUESDAY</th>
+          <th>WEDNESDAY</th>
+          <th>THURSDAY</th>
+          <th>FRIDAY</th>
+        </tr>
+        <tr>
+          <td>7:00 am - 7:30 am</td>
+          <td rowspan="6">IT 331<br />COMIA, LYSA V.<br />LAB 4</td>
+          <td rowspan="3">IT 321<br />PALAD, LANIE P.<br />102</td>
+          <td></td>
+          <td rowspan="4">GEd 104<br />MADLANGBAYAN, JAZEL B.<br />103</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>7:30 am - 8:00 am</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>8:00 am - 8:30 am</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>8:30 am - 9:00 am</td>
+          <td rowspan="3">CS 311<br />COMIA, LYSA V.<br />402</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>9:00 am - 9:30 am</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>9:30 am - 10:00 am</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>10:00 am - 10:30 am</td>
+          <td>&nbsp;</td>
+          <td rowspan="6">IT 314<br />AGDON, FATIMA MARIE P.<br />LAB 3</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>10:30 am - 11:00 am</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>11:00 am - 11:30 am</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td rowspan="4">IT 314<br />AGDON, FATIMA MARIE P.<br />103</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>11:30 am - 12:00 pm</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>12:00 pm - 12:30 pm</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>12:30 pm - 1:00 pm</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>1:00 pm - 1:30 pm</td>
+          <td rowspan="3">MATH 408<br />PEÑERO, ISRAEL P.<br />103</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td rowspan="3">MATH 408<br />PEÑERO, ISRAEL P.<br />103</td>
+          <td rowspan="10">CS 312<br />DUMLAO, MENCHITA F.<br />LAB 3</td>
+        </tr>
+        <tr>
+          <td>1:30 pm - 2:00 pm</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>2:00 pm - 2:30 pm</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>2:30 pm - 3:00 pm</td>
+          <td rowspan="3">IT 321<br />PALAD, LANIE P.<br />103</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td rowspan="3">CS 311<br />COMIA, LYSA V.<br />103</td>
+        </tr>
+        <tr>
+          <td>3:00 pm - 3:30 pm</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>3:30 pm - 4:00 pm</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>4:00 pm - 4:30 pm</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td rowspan="2">GEd 104<br />MADLANGBAYAN, JAZEL B.<br />102</td>
+        </tr>
+        <tr>
+          <td>4:30 pm - 5:00 pm</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>5:00 pm - 5:30 pm</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>5:30 pm - 6:00 pm</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+      </table>
+    </section>
+    <section>
+      <footer>
+        <h2>Course Description:</h2>
+        <ul type="circle">
+          <li>IT 321 - Human-Computer Interaction</li>
+          <li>IT 331 - Application Development and Emerging Technologies</li>
+          <li>CS 311 - Automata Theory and Formal Languages</li>
+          <li>CS 312 - Mobile Computing</li>
+          <li>IT 314 - Web Systems and Technologies</li>
+          <li>GEd 104 - The Contemporary World</li>
+          <li>MATH 408 - Data Analysis</li>
+        </ul>
+      </footer>
+    </section>
+  </body>
+</html>
