--- a/Exercise Sets/Exercise 2/about.html
+++ b/Exercise Sets/Exercise 2/about.html
@@ -1,1 +1,36 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>About Me</title>
+  </head>
+  <body>
+    <div class="outer-container">
+      <div class="inner-container">
+        <h3>Basic Info</h3>
+        <p>Name: Chris Justine L. Padua</p>
+        <p>Date of Birth: March 24, 2004</p>
+        <p>Age: 20 years old</p>
+      </div>
+      <div class="inner-container">
+        <h3>Contacts</h3>
+        <a href="mailto:padua.chrisjustine13@gmail.com"
+          >Email: padua.chrisjustine13@gmail.com<br
+        /></a>
+        <a href="https://github.com/cjlp13"
+          >Github: https://github.com/cjlp13<br
+        /></a>
+        <a href="https://www.facebook.com/profile.php?id=100001447140930"
+          >FB Profile: Justine Padua<br
+        /></a>
+      </div>
+      <div class="inner-container">
+        <h3>Personal Info</h3>
+        <p>Interests: Online games, Comics, Social Media</p>
+        <p>Hobbies: Sleeping, Playing, Reading</p>
+      </div>
+    </div>
+  </body>
+</html>
