--- a/Laboratory Activities/Laboratory Activity 2 - 03-10-2024/visionboard.html
+++ b/Laboratory Activities/Laboratory Activity 2 - 03-10-2024/visionboard.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vision Board</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <h1>JUSTINE'S VISION BOARD</h1>
+    <div class="outer-container">
+        <div class="vision-container">
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+        </div>
+        <div class="vision-container">
+            <div id="long-item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+        </div>
+        <!-- <p id="front-watermark">PASSION.</p> -->
+    </div>
+</body>
+</html>
