--- a/Laboratory Activities/Laboratory Activity 2 - 03-10-2024/visionboard.html
+++ b/Laboratory Activities/Laboratory Activity 2 - 03-10-2024/visionboard.html
@@ -10,7 +10,7 @@
 <body>
     <h1>JUSTINE'S VISION BOARD</h1>
     <div class="outer-container">
-        <div class="top-vision-container">
+        <div class="vision-container">
             <div class="item">
                 <img src="img/Reminder.jpg" alt="Reminder">
             </div>
@@ -28,7 +28,7 @@
             </div>
         </div>
         <p id="front-watermark">PASSION.</p>
-        <div class="bottom-vision-container">
+        <div class="vision-container">
             <div id="long-item">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4lRiJUqNrhlHJzlGOlg7l2?utm_source=generator" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2IA1ctUxjk865QW3CpIuZk?utm_source=generator&theme=0" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
