--- a/Laboratory Activities/Laboratory Activity 3 - 19-11-2024/index.html
+++ b/Laboratory Activities/Laboratory Activity 3 - 19-11-2024/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Word & Sentence Counter</title>
+</head>
+
+<body>
+    <h2>Word and Sentence Counter</h2>
+    <textarea id="textInput" placeholder="Enter your text here..."></textarea>
+    <div id="wordcount">Words: 0</div>
+    <div id="sentenceCount">Sentences: 0</div>
+
+    <script src="script.js"></script>
+</body>
+
+</html>
