--- a/Laboratory Activities/Laboratory Activity 4 - 28-11-2024/index.html
+++ b/Laboratory Activities/Laboratory Activity 4 - 28-11-2024/index.html
@@ -1,1 +1,62 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <title>About Me</title>
+  </head>
+  <body>
+    <div class="outer-container">
+        <div class="inner-container">
+            <div class="inner-content">
+                <div class="card-front">
+                    <span class="material-symbols-outlined"> person_pin </span>
+                    <h3>Basic Info</h3>
+                </div>
+                <div class="card-back">
+                    <span class="material-symbols-outlined"> person_pin </span>
+                    <h3>Basic Info</h3>
+                    <p>Name: Chris Justine L. Padua</p>
+                    <p>Date of Birth: March 24, 2004</p>
+                    <p>Age: 20 years old</p>
+                </div>
+            </div>
+        </div>
+        <div class="inner-container">
+            <div class="inner-content">
+                <div class="card-front">
+                    <span class="material-symbols-outlined"> alternate_email </span>
+                    <h3>Contacts</h3>
+                </div>
+                <div class="card-back">
+                    <span class="material-symbols-outlined"> alternate_email </span>
+                    <h3>Contacts</h3>
+                    <a href="mailto:padua.chrisjustine13@gmail.com">Email: padua.chrisjustine13@gmail.com</a>
+                    <a href="https://github.com/cjlp13">Github: https://github.com/cjlp13</a>
+                    <a href="https://www.facebook.com/profile.php?id=100001447140930">FB Profile: Justine Padua</a>
+                </div>
+            </div>
+        </div>
+        <div class="inner-container">
+            <div class="inner-content">
+                <div class="card-front">
+                    <span class="material-symbols-outlined"> favorite </span>
+                    <h3>Personal Info</h3>
+                </div>
+                <div class="card-back">
+                    <span class="material-symbols-outlined"> favorite </span>
+                    <h3>Personal Info</h3>
+                    <p>Interests: Online games, Comics, Social Media</p>
+                    <p>Hobbies: Sleeping, Playing, Reading</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
+</html>
